used v-cloak to fix FOUC and scroll jump

--- a/assets/main.css
+++ b/assets/main.css
@@ -13,6 +13,10 @@
     background-color: #555;
 }
 
+[v-cloak] {
+    display: none;
+  }
+
 body {
     @apply bg-black text-white overflow-x-hidden;
 }
